--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "typescript-to-do",
   "private": false,
   "version": "0.0.0",
+  "homepage": "https://{username}.github.io/{repo-name}/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.12.3",
@@ -28,6 +31,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
